# ChangeLog for games-emulation/qmc2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2

  16 Nov 2011; Michał Ziąbkowski <mziab@o2.pl>
  -files/qmc2-0.2_beta6-makefile.patch, -files/qmc2-0.2_beta7-makefile.patch:
  Removed old patches.

  16 Nov 2011; Michał Ziąbkowski <mziab@o2.pl> -qmc2-0.2_beta15.ebuild,
  -qmc2-0.2_beta16.ebuild, -qmc2-0.2_beta17.ebuild:
  Removed cruft.

*qmc2-0.34 (16 Nov 2011)

  16 Nov 2011; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.34.ebuild:
  Bumped.

  15 Nov 2011; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta20.ebuild:
  Added missing epatch.

  14 Nov 2011; Piotr Szymaniak <szarpaj@grubelek.pl> qmc2-0.2_beta20.ebuild,
  +files/qmc2-0.2_beta20-minizip.patch:
  Added patch for zlib, thanks to Steve Gill <necrotaur@gmail.com>.

*qmc2-0.2_beta20 (04 Jul 2011)

  04 Jul 2011; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta20.ebuild,
  +files/qmc2-0.2_beta20-makefile.patch:
  Bumped.

*qmc2-0.2_beta19 (04 Apr 2011)

  04 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta19.ebuild:
  Bumped.

*qmc2-0.2_beta18 (01 Apr 2011)

  01 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta18.ebuild:
  Bumped.

  27 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta15.ebuild,
  qmc2-0.2_beta16.ebuild, qmc2-0.2_beta17.ebuild:
  Updated phonon dep.

  24 Oct 2010; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta17.ebuild,
  +files/qmc2-0.2_beta17-makefile.patch:
  Updated Makefile patch.

*qmc2-0.2_beta17 (24 Oct 2010)

  24 Oct 2010; Michał Ziąbkowski <mziab@o2.pl> -qmc2-0.2_beta13.ebuild,
  -qmc2-0.2_beta14.ebuild, +qmc2-0.2_beta17.ebuild:
  Bumped. Removed cruft.

*qmc2-0.2_beta16 (01 Aug 2010)

  01 Aug 2010; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta16.ebuild:
  Bumped.

*qmc2-0.2_beta15 (16 May 2010)

  16 May 2010; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta15.ebuild:
  Bumped.

  15 Mar 2010; Michał Ziąbkowski <mziab@o2.pl> -qmc2-0.2_beta11.ebuild,
  -qmc2-0.2_beta12.ebuild:
  Removed cruft.
