@@ -1,13 +1,5 @@
-AUX qmc2-0.2_beta17-makefile.patch 1058 RMD160 d37f07868a4a028d6d3af3a9c6359f97a67a7ac5 SHA1 c09eb7eec671372d22589ae49b7131d04536a39b SHA256 e3f997c8c7122273c0e94e88912b1278fde53416d67a9b1f67658de6d48180c7
-AUX qmc2-0.2_beta20-makefile.patch 1078 RMD160 898209e0cac5d19503a185a515cd5a0d4fd93203 SHA1 8ee7349788f3d82b24ab20b866bf02233d978df4 SHA256 ee5e78bd57516bff539155a7addf08f624b1d3bc4d8f2932be45784f94da25d6
-AUX qmc2-0.2_beta20-minizip.patch 15710 RMD160 c8abadc1c604ecb844b333ecf01c3bcfd461df6d SHA1 c6946997ccaba3c3228989e57549c5706ba81219 SHA256 e44c7fcb39e29f23a693b585144a71db43a2d20d307b7dd00a9df847ea8c2fe8
 DIST qmc2-0.2.b18.tar.bz2 2905181 RMD160 792fb2c32a0d5c65189d84ab7d18eb66dacaf685 SHA1 dbdafff9692d24a5b9c96efcc35d0d94e35de375 SHA256 9da773a98ff9ebec850f0343b116da94dcdeab8ec985c7b93cf9a441cba907a0
 DIST qmc2-0.2.b19.tar.bz2 3002798 RMD160 a65c42f3819d0683e991d29d1bd74640d98441f1 SHA1 2f6d075a0e908dad86efef0c93be06fd3d65ac9c SHA256 ee2cfce6e7ae8ebfa8dcaaba8139b31f0427fa7c35642a8ffd2066a005fb83f6
 DIST qmc2-0.2.b20.tar.bz2 3456829 RMD160 f147ae7018bed413f75d66f574accb2197c3f91e SHA1 807762297373928fb7b06d9b55e97bdd966d5c72 SHA256 7a0fa2172f5e6e0704f433ac01002a1e1af94baf72db2eacc689d7fe0d0e39ce
 DIST qmc2-0.34.tar.bz2 8595022 RMD160 877bcb4d36caeb2ca93eecd68a6e60f8e8d0221a SHA1 d3d195885de8673ffcf07b47d8d4926ac5177182 SHA256 1eabc12004af36cd88615a43a9f7d77c17a616a3db9b2110da3a9070a1ca0766
-EBUILD qmc2-0.2_beta18.ebuild 2321 RMD160 06bce6e6098705e6f03c57d1f9b9a3f734c32e00 SHA1 dbacc8f504bc18321c32e0f5e44a42eed4339b1b SHA256 addc728fd9cfce2b4518aef03f2632050153e41ffaeeb2b77b16174ad7d23043
-EBUILD qmc2-0.2_beta19.ebuild 2321 RMD160 06bce6e6098705e6f03c57d1f9b9a3f734c32e00 SHA1 dbacc8f504bc18321c32e0f5e44a42eed4339b1b SHA256 addc728fd9cfce2b4518aef03f2632050153e41ffaeeb2b77b16174ad7d23043
-EBUILD qmc2-0.2_beta20.ebuild 2370 RMD160 b2cf42f8f8d91ceefe89a6662eec5d61dda2938f SHA1 e78320f9c846b60077ce8caabbaa720f3ac614cf SHA256 c3bc6f08893c1d69840201ace82b9a6fc3b4e0ac98c6b4ccc136b5257f6b8f31
-EBUILD qmc2-0.34.ebuild 2365 RMD160 0d6a1d0e8b5724f37973dc90aa7a58e03fec9440 SHA1 ad3b1e06fc935740285358e9e48438ebaeb97dab SHA256 9b9809653c67305a105eb4b43a194fb89ee840e82cfebb5ce2e733d418e3b0b6
-MISC ChangeLog 6338 RMD160 3a604d290cc68428e9db77cbdc8e85ac430d8618 SHA1 111b9320ca359969e4493ae191effa5f78d12ba1 SHA256 087f35792d9e2bc7e7f8198d356d5f76857392e95f1944f9ab05849c799ec8f8
-MISC metadata.xml 439 RMD160 47810bb485de0c47a392f66e57c41c02473eeec4 SHA1 9539b3cc6891510b58d4c2c65cf239899de1698d SHA256 ae91316b612932ba696195995191758b7c763554557ee8d6c49b341e3aba6e82
+DIST qmc2-0.35.tar.bz2 9122784 RMD160 cdb1e2b68212e9a43c00d683afdc7787945d55a4 SHA1 6ef8da387eee3a149ac6bfb529ed528d9ec9b469 SHA256 bdf54ad4479675054cf14ce967291ff952bbfff65eec50151ab0fa64adb1a94d
